--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "precommit": "pretty-quick --staged",
-    "base": "webpack --config webpack.base.js --watch"
+    "base": "webpack --config webpack.base.js --watch",
+    "sitemap": "babel-node ./src/sitemap-generator.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,11 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "@babel/node": "^7.16.8",
     "@babel/polyfill": "^7.6.0",
+    "@babel/preset-react": "^7.16.7",
     "autoprefixer": "^10.4.2",
     "axios": "^0.17.0",
-    "babel-register": "^6.26.0",
     "bootstrap": "^4.0.0-alpha",
     "compression": "^1.6.2",
     "compression-webpack-plugin": "^3.0.0",
@@ -51,6 +53,8 @@
     "react-router": "^5.0.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-router-sitemap": "^1.2.0",
+    "react-router-sitemap-generator": "0.0.8",
     "react-schemaorg": "^2.0.0",
     "react-share": "^1.18.1",
     "react-slick": "^0.26.1",
@@ -66,17 +70,21 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^9.0.1",
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.20.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
