--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "@babel/preset-react": "^7.16.7",
     "autoprefixer": "^10.4.2",
     "axios": "^0.17.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.4.6",
     "bootstrap": "^4.0.0-alpha",
     "compression": "^1.6.2",
     "compression-webpack-plugin": "^3.0.0",
     "css": "^2.2.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "jquery": "^3.5.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
@@ -46,6 +51,7 @@
     "react": "^16.10.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.10.1",
+    "react-dynamic-sitemap": "^1.2.1",
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
@@ -61,6 +67,7 @@
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "regenerator-runtime": "^0.13.9",
     "schema-dts": "^1.0.0",
     "semantic-ui-react": "^0.88.2",
     "slick-carousel": "^1.8.1",
@@ -71,8 +78,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/register": "^7.16.9",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^8.2.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
