--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@babel/register": "^7.16.9",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^8.2.3",
+    "babel-plugin-styled-components": "^2.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
