--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "jquery": "^3.5.1",
+    "jsdom": "^19.0.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.8.0",
@@ -56,6 +57,7 @@
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.4",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router": "^5.0.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -64,6 +66,7 @@
     "react-schemaorg": "^2.0.0",
     "react-share": "^1.18.1",
     "react-slick": "^0.26.1",
+    "react-use-media-query-hook": "0.0.1",
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
